traefik-ingress/ingressclass.yml
---
# Source: traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-ingress-controller-traefik
    helm.sh/chart: traefik-20.5.2
    app.kubernetes.io/managed-by: Helm
  name: traefik-ingress
spec:
  controller: traefik.io/ingress-controller
