traefik-ingress/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app: traefik-ingress-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-ingress
