traefik-ingress/service.yml
---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-ingress-controller-traefik
    helm.sh/chart: traefik-20.5.2
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-ingress-controller-traefik
  ports:
  - port: 80
    name: "web"
    targetPort: web
    protocol: TCP
  - port: 443
    name: "websecure"
    targetPort: websecure
    protocol: TCP
  - port: 9000
    name: "dashboard"
    targetPort: traefik
    protocol: TCP
  - port: 9100
    name: "metrics"
    targetPort: metrics
    protocol: TCP
