traefik-ingress/dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-controller-dashboard
  namespace: traefik
  annotations:
    helm.sh/hook: "post-install,post-upgrade"
    meta.helm.sh/release-name: traefik-ingress-controller
    meta.helm.sh/release-namespace: traefik
    kubernetes.io/ingress.class: traefik-ingress
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-ingress-controller-traefik
    helm.sh/chart: traefik-20.5.2
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
  - websecure
  routes:
  - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls: {}
