traefik-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-https
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: traefik.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-controller
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: traefik.dev.local
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-controller
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-api
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: traefik.dev.local
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-controller
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-metrics
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: traefik.dev.local
    http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-controller
            port:
              number: 9100
